
namespace Domain.Enums
{
    public enum PurchaseOrderStatus
    {
        Draft,
        Pending,
        Approved,
        Ordered,
        Received,
        Cancelled
    }
}
